--- a/index.html
+++ b/index.html
@@ -2,11 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mirsa Gassemie</title>
+    <title>Mirza Gasemie</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-<h1>Mirsa Gassemie</h1>
+<h1>Mirza Gasemie</h1>
+<p>
+    Menge: 4 Portionen<br>
+    Vorbereitungszeit: 25 min<br>
+    Schwierigkeit: Easy<br>
+    Gesamtzeit: Vorbereitungs- und Kochzeit 90 min
+</p>
 <P>Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!</P>
+<h2>Ingredients</h2>
+<table>
+    <caption>Ingredients</caption>
+    <tr>
+        <th>What?</th>
+        <th>How many/much?</th>
+    </tr>
+    <tr>
+        <td>Bulb Onion</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>Egg</td>
+        <td>4</td>
+    </tr>
+    <tr>
+        <td>Eggplant</td>
+        <td>4</td>
+    </tr>
+    <tr>
+        <td>Garlic</td>
+        <td>Half a bulb</td>
+    </tr>
+    <tr>
+        <td>Tomato</td>
+        <td>6</td>
+    </tr>
+</table>
+<img src="images/ingredients.jpg" alt="ingredients">
+
+<h2>Instructions in 6 steps</h2>
+
+<h3>Step 1</h3>
+<P>Originally the eggplants are supposed to be grilled on real fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
+<img src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+
+<h3>Step 2</h3>
+<P>After 45 minutes, let them cool. In the meantime, cut your onions and garlic and grate the tomatoes (or use a mixer). Your result should look something like this.</P>
+<img src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+
+<h3>Step 3</h3>
+<P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife bring them into real tiny pieces.</P>
+<img src="images/base_ready.jpg" alt="base_ready">
+
+<h3>Step 4</h3>
+<P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife bring them into real tiny pieces.</P>
+
+<h3>Step 5</h3>
+<P>Now we start frying everything! Start with the eggplants, after 5 minutes, add the onions and garlic, after they all got a bit golden, add the tomatoes, bring the oven lower, put a lid on top of the pan and let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
+<img src="images/eggs_added.jpg" alt="eggs_added">
+
+<h3>Step 6</h3>
+<P>And finally Mirza-Ghassemie is ready to serve! :-)</P>
+<img src="images/serve.jpg" id="serve" alt="serve">
 
 </body>
 </html>
