--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
 <h1>Mirza Gasemie</h1>
 <p>
-    Menge: 4 Portionen<br>
-    Vorbereitungszeit: 25 min<br>
-    Schwierigkeit: Easy<br>
-    Gesamtzeit: Vorbereitungs- und Kochzeit 90 min
+    Recipe from: Mahin Hekmatian
+    Quantity: 4 portions<br>
+    Preparation time: 25 min<br>
+    Level: Easy<br>
+    Total time (preparation and cooking): 90 min
 </p>
 <P>Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!</P>
 <h2>Ingredients</h2>
