--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Mirza Gasemie</h1>
 <p>
-    Recipe from: Mahin Hekmatian
+    Recipe from: Mahin Hekmatian<br>
     Quantity: 4 portions<br>
     Preparation time: 25 min<br>
     Level: Easy<br>
