--- a/index.html
+++ b/index.html
@@ -1,74 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Mirza Gasemie</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Mahin recipes</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/blog-post.css" rel="stylesheet">
+
 </head>
+
 <body>
-<h1>Mirza Gasemie</h1>
-<p>
-    Recipe from: Mahin Hekmatian<br>
-    Quantity: 4 portions<br>
-    Preparation time: 25 min<br>
-    Level: Easy<br>
-    Total time (preparation and cooking): 90 min
-</p>
-<P>Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!</P>
-<h2>Ingredients</h2>
-<table>
-    <caption>Ingredients</caption>
-    <tr>
-        <th>What?</th>
-        <th>How many/much?</th>
-    </tr>
-    <tr>
-        <td>Bulb Onion</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>Egg</td>
-        <td>4</td>
-    </tr>
-    <tr>
-        <td>Eggplant</td>
-        <td>4</td>
-    </tr>
-    <tr>
-        <td>Garlic</td>
-        <td>Half a bulb</td>
-    </tr>
-    <tr>
-        <td>Tomato</td>
-        <td>6</td>
-    </tr>
-</table>
-<img src="images/ingredients.jpg" alt="ingredients">
 
-<h2>Instructions in 6 steps</h2>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Mahin recipes</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-<h3>Step 1</h3>
-<P>Originally the eggplants are supposed to be grilled on real fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
-<img src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+  <!-- Page Content -->
+  <div class="container">
 
-<h3>Step 2</h3>
-<P>After 45 minutes, let them cool. In the meantime, cut your onions and garlic and grate the tomatoes (or use a mixer). Your result should look something like this.</P>
-<img src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+    <div class="row">
 
-<h3>Step 3</h3>
-<P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife bring them into real tiny pieces.</P>
-<img src="images/base_ready.jpg" alt="base_ready">
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
 
-<h3>Step 4</h3>
-<P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife bring them into real tiny pieces.</P>
+        <!-- Title -->
+        <h1 class="mt-4">Mirza Ghassemi</h1>
 
-<h3>Step 5</h3>
-<P>Now we start frying everything! Start with the eggplants, after 5 minutes, add the onions and garlic, after they all got a bit golden, add the tomatoes, bring the oven lower, put a lid on top of the pan and let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
-<img src="images/eggs_added.jpg" alt="eggs_added">
+        <!-- Author -->
+        <p class="lead">
+          by
+          <a href="#">Mahin Hekmatian</a>
+        </p>
 
-<h3>Step 6</h3>
-<P>And finally Mirza-Ghassemie is ready to serve! :-)</P>
-<img src="images/serve.jpg" id="serve" alt="serve">
+        <hr>
+
+        <!-- Date/Time -->
+        <p>Posted on April 14, 2020</p>
+
+        <hr>
+
+        <!-- Preview Image -->
+        <img class="img-fluid rounded" src="images/ingredients.jpg" alt="ingredients">
+
+        <hr>
+
+        <!-- Post Content -->
+
+        <p class="lead">
+          Quantity: 4 portions<br>
+          Preparation time: 25 min<br>
+          Level: Easy<br>
+          Total time (preparation and cooking): 90 min
+        </p>
+        <P>Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!</P>
+        <h2>Ingredients</h2>
+        <table>
+            <caption>Ingredients</caption>
+            <tr>
+                <th>What?</th>
+                <th>How many/much?</th>
+            </tr>
+            <tr>
+                <td>Bulb Onion</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>Egg</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>Eggplant</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>Garlic</td>
+                <td>Half a bulb</td>
+            </tr>
+            <tr>
+                <td>Tomato</td>
+                <td>6</td>
+            </tr>
+        </table>
+
+        <blockquote class="blockquote">
+          <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
+          <footer class="blockquote-footer">Jonathan Safran Foer
+            <cite title="Source Title">Eating Animals</cite>
+          </footer>
+        </blockquote>
+
+        <h2>Instructions in 6 steps</h2>
+
+        <h3>Step 1</h3>
+        <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
+        <img src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+
+        <h3>Step 2</h3>
+        <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
+        <img src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+
+        <h3>Step 3</h3>
+        <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
+        <img src="images/base_ready.jpg" alt="base_ready">
+
+        <h3>Step 4</h3>
+        <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
+
+        <h3>Step 5</h3>
+        <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
+        <img src="images/eggs_added.jpg" alt="eggs_added">
+
+        <h3>Step 6</h3>
+        <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
+        <img src="images/serve.jpg" id="serve" alt="serve">
+
+        <hr>
+
+        <!-- Comments Form -->
+        <div class="card my-4">
+          <h5 class="card-header">Leave a Comment:</h5>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <textarea class="form-control" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+
+        <!-- Search Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Search</h5>
+          <div class="card-body">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Categories Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Other dishes</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">Fesenjun</a>
+                  </li>
+                  <li>
+                    <a href="#">Zereshkpolo</a>
+                  </li>
+                  <li>
+                    <a href="#">Lubiapolo</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">Gheyme</a>
+                  </li>
+                  <li>
+                    <a href="#">Ghorme</a>
+                  </li>
+                  <li>
+                    <a href="#">Shirinpolo</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">History of the dish</h5>
+          <div class="card-body">
+            Read more about the story of this dish on <span style="color:blue"><a href="https://en.wikipedia.org/wiki/Mirza_Ghassemi">wikipedia</a></span>.
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
