--- a/index.html
+++ b/index.html
@@ -178,32 +178,16 @@
 
         <!-- Categories Widget -->
         <div class="card my-4">
-          <h5 class="card-header">Other dishes</h5>
+          <h5 class="card-header">Similar dishes, other countries</h5>
           <div class="card-body">
             <div class="row">
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Fesenjun</a>
+                    <a href="https://www.breadandsaltbetweenus.org/scrambled-eggs-and-tomato">Juz muz of Syria</a>
                   </li>
                   <li>
-                    <a href="#">Zereshkpolo</a>
-                  </li>
-                  <li>
-                    <a href="#">Lubiapolo</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">Gheyme</a>
-                  </li>
-                  <li>
-                    <a href="#">Ghorme</a>
-                  </li>
-                  <li>
-                    <a href="#">Shirinpolo</a>
+                    <a href="https://www.196flavors.com/macedonia-pindjur/">Pinjur of Macedonia</a>
                   </li>
                 </ul>
               </div>
