--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Mahin recipes</title>
+  <meta name="description" content="cooking book for friends">
+  <meta name="author" content="sasan zahirnia">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="css/blog-post.css" rel="stylesheet">
+  <!-- BTSTRP-social-->
+  <link rel="stylesheet" href="node_modules/bootstrap-social/node_modules/bootstrap/dist/css/bootstrap.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+
+  <title>Mahin recipes</title>
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-static">
+
     <div class="container">
       <a class="navbar-brand" href="#">Mahin recipes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home
               <span class="sr-only">(current)</span>
@@ -47,119 +51,123 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    <!-- recipe name, cook -->
     <div class="row">
-
       <!-- Post Content Column -->
-      <div class="col-lg-8">
-
+      <div class="col-12">
         <!-- Title -->
         <h1 class="mt-4">Mirza Ghassemi</h1>
-
         <!-- Author -->
         <p class="lead">
           by
-          <a href="#">Mahin Hekmatian</a>
+          <a href="https://www.facebook.com/mahin.hekmatian">Mahin Hekmatian</a>
         </p>
-
-        <hr>
-
-        <!-- Date/Time -->
-        <p>Posted on April 14, 2020</p>
-
-        <hr>
-
-        <!-- Preview Image -->
-        <img class="img-fluid rounded" src="images/ingredients.jpg" alt="ingredients">
-
-        <hr>
-
-        <!-- Post Content -->
-
-        <p class="lead">
-          Quantity: 4 portions<br>
-          Preparation time: 25 min<br>
-          Level: Easy<br>
-          Total time (preparation and cooking): 90 min
-        </p>
-        <P>Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!</P>
-        <h2>Ingredients</h2>
-        <table>
-            <caption>Ingredients</caption>
-            <tr>
-                <th>What?</th>
-                <th>How many/much?</th>
-            </tr>
-            <tr>
-                <td>Bulb Onion</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>Egg</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>Eggplant</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>Garlic</td>
-                <td>Half a bulb</td>
-            </tr>
-            <tr>
-                <td>Tomato</td>
-                <td>6</td>
-            </tr>
-        </table>
-
+      </div>
+    </div>
+    <!-- quote -->
+    <div class="row">
+      <div class="col-12">
         <blockquote class="blockquote">
           <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
           <footer class="blockquote-footer">Jonathan Safran Foer
             <cite title="Source Title">Eating Animals</cite>
           </footer>
         </blockquote>
-
+      </div>
+    </div>
+    <!-- cooking info => portion, time, etc. -->
+    <div class="row">
+        <div class="col-12 table-responsive">
+        <!-- Post Content -->
+          <table class="table table-bordered text-center">
+            <thead class="thead-dark">
+              <tr>
+                <th class="text-center">Quantity</th>
+                <th class="text-center">Level</th>
+                <th class="text-center">Prep. time</th>
+                <th class="text-center">Total time</th>
+              </tr>
+              <tr>
+                <td>4 portions</td> <!-- data input -->
+                <td>Easy</td>       <!-- data input -->
+                <td>25 min</td>     <!-- data input -->
+                <td>90 min</td>     <!-- data input -->
+              </tr>
+            </thead>
+          </table>
+        </div>
+    </div>
+    <!-- ingredients image -->
+    <div class="row">
+      <div class="col-12">
+      <img class="img-fluid rounded" src="images/ingredients.jpg" alt="ingredients">
+      </div>
+    </div>
+    <!-- ingredients table -->
+    <div class="row">
+      <div class="col-12 table-responsive">
+        <table class="table table-dark text-white">
+          <caption>Ingredients</caption>
+          <tr>
+            <th class="text-center">Bulb Onion</th>
+            <th class="text-center">Egg</th>
+            <th class="text-center">Eggplant</th>
+            <th class="text-center">Garlic</th>
+            <th class="text-center">Tomato</th>
+          </tr>
+          <tr>
+            <th class="text-center">1</th>
+            <th class="text-center">4</th>
+            <th class="text-center">4</th>
+            <th class="text-center">Half a bulb</th>
+            <th class="text-center">6</th>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!-- intro -->
+    <div class="row">
+      <div class="col-12">
+        <P>
+        Here is a recipe of a tasty and simple Iranian dish. It's a bit like Omelette but with love, I mean eggplants of course. Generally the dish is somewhat flexible-- please feel free to adjust the quantities to your taste. I personally like the dish with more onions and garlic as you can see in the pictures. I hope you enjoy it!!
+        </P>
+      </div>
+    </div>
+    <!-- instructions -->
+    <div class="row">
+      <div class="col-12">
         <h2>Instructions in 6 steps</h2>
 
         <h3>Step 1</h3>
         <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
-        <img src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+        <img class="img-fluid rounded" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
 
         <h3>Step 2</h3>
         <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
-        <img src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+        <img class="img-fluid rounded" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
 
         <h3>Step 3</h3>
         <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
 
         <h3>Step 4</h3>
         <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
-        <img src="images/base_ready.jpg" alt="base_ready">
+        <img class="img-fluid rounded" src="images/base_ready.jpg" alt="base_ready">
 
         <h3>Step 5</h3>
         <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
-        <img src="images/eggs_added.jpg" alt="eggs_added">
+        <img class="img-fluid rounded" src="images/eggs_added.jpg" alt="eggs_added">
 
         <h3>Step 6</h3>
         <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
-        <img src="images/serve.jpg" id="serve" alt="serve">
-
+        <img class="img-fluid rounded" src="images/serve.jpg" id="serve" alt="serve">
         <hr>
-
-        <!-- Comments Form -->
-        <div class="card my-4">
-          <h5 class="card-header">Leave a Comment:</h5>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <textarea class="form-control" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
 
+  <!-- Sidebar Widgets Column -->
+  <div class="container">
+    <div class="row">
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
 
@@ -174,7 +182,7 @@
               </span>
             </div>
           </div>
-        </div>
+        </div >
 
         <!-- Categories Widget -->
         <div class="card my-4">
@@ -202,19 +210,19 @@
             Read more about the story of this dish on <span style="color:blue"><a href="https://en.wikipedia.org/wiki/Mirza_Ghassemi">wikipedia</a></span>.
           </div>
         </div>
-
       </div>
-
     </div>
-    <!-- /.row -->
-
+        <!-- /.row -->
   </div>
-  <!-- /.container -->
+    <!-- /.container -->
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    <div class="container text-center">
+      <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
+      <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
+      <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
+      <p class="m-0 text-white">Copyright &copy; Your Website 2020</p>
     </div>
     <!-- /.container -->
   </footer>
