--- a/mirza_ghassemi.html
+++ b/mirza_ghassemi.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,7 +25,6 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-static">
-
     <div class="container">
       <a class="navbar-brand" href="#">Mahin recipes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,16 +64,7 @@
       </div>
     </div>
 
-    <!-- intro -->
-    <div class="row">
-      <div class="col-12">
-        <P class="mt-10">
-        Here is a recipe of a tasty and simple Iranian dish. It's a sort of Omelette with eggplants. Generally the dish is somewhat flexible-- feel free to adjust the quantities to your taste. I personally prefer the Garlicky version (check out the ingredients section). Enjoy!!
-        </P>
-      </div>
-    </div>
-
-    <!-- cooking info => portion, time, etc. -->
+    <!-- Facts & Figures => portion, time, etc. -->
     <div class="row">
         <div class="col-12 table-responsive">
           <h2>Facts &amp; Figures</h2>
@@ -97,6 +87,15 @@
               </tbody>
             </table>
         </div>
+    </div>
+
+    <!-- intro -->
+    <div class="row">
+      <div class="col-12">
+        <P class="mt-10">
+        Here is a recipe of a tasty and simple Iranian dish. It's a sort of Omelette with eggplants. Generally the dish is somewhat flexible-- feel free to adjust the quantities to your taste. I personally prefer the Garlicky version (check out the ingredients section). Enjoy!!
+        </P>
+      </div>
     </div>
 
     <!-- ingredients table -->
@@ -143,31 +142,51 @@
     <!-- instructions -->
     <div class="row">
       <div class="col-12">
-        <h2>Instructions in 6 steps</h2>
+        <h2>Instructions in 5 steps</h2>
 
-        <h3>Step 1</h3>
-        <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
-        <img class="img-fluid rounded" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+        <div class="media">
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+          <div class="media-body">
+            <h3 class="mt-0">Step 1</h3>
+            <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
+          </div>
+        </div>
 
-        <h3>Step 2</h3>
-        <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
-        <img class="img-fluid rounded" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+        <div class="media">
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+          <div class="media-body">
+            <h3 class="mt-0">Step 2</h3>
+            <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
+            <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
+          </div>
+        </div>
 
-        <h3>Step 3</h3>
-        <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
+        <div class="media">
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/base_ready.jpg" alt="base_ready">
+          <div class="media-body">
+            <h3 class="mt-0">Step 3</h3>
+            <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
+          </div>
+        </div>
 
-        <h3>Step 4</h3>
-        <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
-        <img class="img-fluid rounded" src="images/base_ready.jpg" alt="base_ready">
+        <div class="media">
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/eggs_added.jpg" alt="base_ready">
+          <div class="media-body">
+            <h3 class="mt-0">Step 4</h3>
+            <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
+          </div>
+        </div>
 
-        <h3>Step 5</h3>
-        <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
-        <img class="img-fluid rounded" src="images/eggs_added.jpg" alt="eggs_added">
+        <div class="media">
+          <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/serve.jpg" id="serve" alt="serve">
+          <div class="media-body">
+            <h3 class="mt-0">Step 5</h3>
+            <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
+          </div>
+        </div>
 
-        <h3>Step 6</h3>
-        <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
-        <img class="img-fluid rounded" src="images/serve.jpg" id="serve" alt="serve">
         <hr>
+
       </div>
     </div>
 
