responsive images d-none xs-visible

--- a/a_soup_recipe_from_the_north_joanna.html
+++ b/a_soup_recipe_from_the_north_joanna.html
@@ -151,7 +151,7 @@
             </tr>
              <tr>
               <th class="text-center">other ingredients</th>
-              <td class="text-center">Tomato purée, Lemon juice, Olive oil, Fresh or frozen Parsley, Chilli flakes, Paprika powder, Salt, Black pepper</td>
+              <td class="text-center">Tomato purée, Lemon juice, Olive oil, <br>Fresh or frozen Parsley, Chilli flakes, <br>Paprika powder, Salt, Black pepper</td>
             </tr>
           </tbody>
         </table>
@@ -163,6 +163,7 @@
     <div class="row">
         <div class="col-12">
             <h2>Instructions in 4 steps</h2>
+
             <div class="media">
               <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
               <div class="media-body">
@@ -170,8 +171,8 @@
                 <P> Basically chop onion and garlic, then potatoes (smallish pieces), both sweet and normal, as well as the peeled root celery, yellow pepper and carrots.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
             </div>
 
             <div class="media">
@@ -183,8 +184,8 @@
                   add it to a pot/deep frying pan with heated olive oil. After a couple of minutes when these are soft and shiny.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
             </div>
 
             <div class="media">
@@ -196,8 +197,8 @@
                   Turn down the heat so that the soup keeps its juiciness - you might want to add some water if too much boils off.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
             </div>
 
             <div class="media">
@@ -210,8 +211,8 @@
                 <p>Best served with a slice of sourdough bread served with salty butter and a slice of Swedish cheese. :)</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
             </div>
             <hr>
 
