--- a/carrot_cake_alex.html
+++ b/carrot_cake_alex.html
@@ -164,8 +164,8 @@
                   Use two other pots for the eggs. Separate the eggs - white and yellow.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
             </div>
 
             <div class="media">
@@ -179,8 +179,8 @@
                   Afterwards you put the stiff egg white under the dough, but don't stir this hard, just use a spoon and stir a little bit until it is all one dough.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
             </div>
 
             <div class="media">
@@ -190,8 +190,8 @@
                 <P>Put it into a buttered cake form and bake it for 50 - 60 min at 200 degrees celsius.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
             </div>
 
             <div class="media">
@@ -201,8 +201,8 @@
                 <P>After baking you can cover the cake with chocolate or anything else you like.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/carrot_cake_alex/after_oven.jpeg" alt="eggs_added">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/carrot_cake_alex/after_oven.jpeg" alt="eggs_added">
             </div>
             <hr>
 
