--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="carousel-item active" id="mirza_ghessemie_mahin">
                             <a href="./mirza_ghassemi_mahin.html">
                                 <img class="d-block img-fluid img-thumbnail align-self-center" src="img/mirza_ghessemie_mahin/ingredients_size_fitted.jpg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-dark">
+                                <div class="carousel-caption d-none d-md-block text-light hidden-xs">
                                     <h2>Mirza Ghessemie</h2>
                                     <p>A tasty and easily made Iranian Omelette with eggplants!</p>
                                 </div>
@@ -70,7 +70,7 @@
                         <div class="carousel-item" id="carrot_cake_alex">
                             <a href="./carrot_cake_alex.html">
                                 <img class="d-block img-fluid img-thumbnail align-self-center" src="img/carrot_cake_alex/served.jpeg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-dark">
+                                <div class="carousel-caption d-none d-md-block text-dark hidden-xs">
                                     <h2>Lazy carrot cake</h2>
                                     <p>A quick &amp; healthy one!</p>
                                 </div>
@@ -80,7 +80,7 @@
                         <div class="carousel-item" id="a_soup_recipe_from_the_north">
                             <a href="./a_soup_recipe_from_the_north_joanna.html">
                                 <img class="d-block img-fluid img-thumbnail align-self-center" src="img/a_soup_recipe_from_the_north_joanna/ingredients.jpeg" alt="ingredients">
-                                <div class="carousel-caption d-none d-md-block text-dark">
+                                <div class="carousel-caption d-none d-md-block text-primary hidden-xs">
                                     <h2>A recipe from the North</h2>
                                     <p>This soup makes even Swedish cheese tasty! ;)</p>
                                 </div>
