--- a/mirza_ghassemi_mahin.html
+++ b/mirza_ghassemi_mahin.html
@@ -153,8 +153,8 @@
                 <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/mirza_ghessemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
             </div>
 
             <div class="media">
@@ -165,8 +165,8 @@
                 <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/mirza_ghessemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
             </div>
 
             <div class="media">
@@ -176,8 +176,8 @@
                 <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/base_ready.jpg" alt="base_ready">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/mirza_ghessemie_mahin/base_ready.jpg" alt="base_ready">
             </div>
 
             <div class="media">
@@ -187,8 +187,8 @@
                 <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/eggs_added.jpg" alt="eggs_added">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/mirza_ghessemie_mahin/eggs_added.jpg" alt="eggs_added">
             </div>
 
             <div class="media">
@@ -198,8 +198,8 @@
                 <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
               </div>
             </div>
-            <div>
-                <img class="d-flex mr-3 img-thumbnail align-self-center visible-xs vw-100" src="img/mirza_ghessemie_mahin/serve.jpg" alt="serve">
+            <div class="d-none visible-xs col-12">
+                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/mirza_ghessemie_mahin/serve.jpg" alt="serve">
             </div>
             <hr>
 
