minimal ready - photos res.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://zahirnia.github.io/cookbook/cookbook_minimal/carousel/index.html">
+    <meta http-equiv="refresh" content="0; url=./cookbook_minimal/carousel/index.html">
     <title>Dummy index</title>
 </head>
 <body>
