--- a/cookbook_minimal/carousel/a_soup_recipe_from_the_north_joanna.html
+++ b/cookbook_minimal/carousel/a_soup_recipe_from_the_north_joanna.html
@@ -22,229 +22,199 @@
 </head>
 
 <body>
+    <header>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <a class="navbar-brand" href="./index.html">Recipes from family & friends</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+    </header>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-static">
-    <div class="container">
-      <a class="navbar-brand" href="#">Mahin recipes</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Page Content -->
+    <main role="main">
 
-  <!-- Page Content -->
-  <div class="container">
+      <!-- Page Content -->
+      <div class="container">
 
-    <!-- recipe name, chef -->
-    <div class="row">
-      <div class="col-12">
-          <div class="media">
-            <div class="media-body">
-              <!-- Title -->
-              <h1 class="mt-0">A soup recipe from the North</h1>
-              <!-- Author -->
-              <p class="lead"> by <a href="https://www.facebook.com/">Joanna</a></p>
+        <!-- recipe name, chef -->
+        <div class="row">
+          <div class="col-12">
+              <div class="media">
+                <div class="media-body">
+                  <!-- Title -->
+                  <h1 class="mt-0">A soup recipe from the North</h1>
+                  <!-- Author -->
+                  <p class="lead"> by <a href="https://www.facebook.com/">Joanna</a></p>
+                </div>
             </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <!-- intro -->
-    <div class="row">
-      <div class="col-12">
-        <P class="mt-10">
-        Here is a tasty soup, just in time for summer when you need it. ;)
-        </P>
-      </div>
-    </div>
+        <!-- intro -->
+        <div class="row">
+          <div class="col-12">
+            <P class="mt-10">
+            Here is a tasty soup, just in time for summer when you need it. ;)
+            </P>
+          </div>
+        </div>
 
-    <!-- Facts & Figures => portion, time, etc. -->
-    <div class="row">
-        <div class="table-responsive d-inline-block">
-          <h2>Facts &amp; Figures</h2>
-            <table class="table table-striped table-bordered text-center">
+        <!-- ingredients table -->
+        <div class="row">
+          <div class="col-12 table-responsive">
+            <h2>Ingredients</h2>
+            <table class="table table-striped">
               <thead class="thead-dark">
-                <tr>
+                  <th class="text-center">&nbsp;</th>
                   <th class="text-center">Quantity</th>
-                  <th class="text-center">Difficulty</th>
-                  <th class="text-center">Prep. time</th>
-                  <th class="text-center">Total time</th>
-                </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>4 portions</td> <!-- data input -->
-                  <td>Easy</td>       <!-- data input -->
-                  <td>60 min</td>     <!-- data input -->
-                  <td>90 min</td>     <!-- data input -->
+                  <th class="text-center">Onion</th>
+                  <td class="text-center">1 Bulb</td>
+                </tr>
+                <tr>
+                  <th class="text-center">Carrot</th>
+                  <td class="text-center">2 Fruits</td>
+                </tr>
+                <tr>
+                  <th class="text-center">Root celery</th>
+                  <td class="text-center">1 piece</td>
+                </tr>
+                <tr>
+                  <th class="text-center">Garlic</th>
+                  <td class="text-center">x cloves (you decide)</td>
+                </tr>
+                <tr>
+                  <th class="text-center">Yellow pepper</th>
+                  <td class="text-center">Maybe half a Fruit</td>
+                </tr>
+                 <tr>
+                  <th class="text-center">Crème fraîche</th>
+                  <td class="text-center">A few table spoons</td>
+                </tr>
+                 <tr>
+                  <th class="text-center">Potato</th>
+                  <td class="text-center">4 small Fruit</td>
+                </tr>
+                 <tr>
+                  <th class="text-center">Sweet potato</th>
+                  <td class="text-center">1 Fruit</td>
+                </tr>
+                 <tr>
+                  <th class="text-center">Red lentils</th>
+                  <td class="text-center">1 Cup</td>
+                </tr>
+                <tr>
+                  <th class="text-center">Chopped tomatoes</th>
+                  <td class="text-center">1 Can</td>
+                </tr>
+                 <tr>
+                  <th class="text-center">other ingredients</th>
+                  <td class="text-center">Tomato purée, Lemon juice, Olive oil, <br>Fresh or frozen Parsley, Chilli flakes, <br>Paprika powder, Salt, Black pepper</td>
                 </tr>
               </tbody>
             </table>
+          </div>
         </div>
-    </div>
 
-    <!-- ingredients table -->
-    <div class="row">
-      <div class="col-12 table-responsive">
-        <h2>Ingredients</h2>
-        <table class="table table-striped">
-          <thead class="thead-dark">
-              <th class="text-center">&nbsp;</th>
-              <th class="text-center">Quantity</th>
-          </thead>
-          <tbody>
-            <tr>
-              <th class="text-center">Onion</th>
-              <td class="text-center">1 Bulb</td>
-            </tr>
-            <tr>
-              <th class="text-center">Carrot</th>
-              <td class="text-center">2 Fruits</td>
-            </tr>
-            <tr>
-              <th class="text-center">Root celery</th>
-              <td class="text-center">1 piece</td>
-            </tr>
-            <tr>
-              <th class="text-center">Garlic</th>
-              <td class="text-center">x cloves (you decide)</td>
-            </tr>
-            <tr>
-              <th class="text-center">Yellow pepper</th>
-              <td class="text-center">Maybe half a Fruit</td>
-            </tr>
-             <tr>
-              <th class="text-center">Crème fraîche</th>
-              <td class="text-center">A few table spoons</td>
-            </tr>
-             <tr>
-              <th class="text-center">Potato</th>
-              <td class="text-center">4 small Fruit</td>
-            </tr>
-             <tr>
-              <th class="text-center">Sweet potato</th>
-              <td class="text-center">1 Fruit</td>
-            </tr>
-             <tr>
-              <th class="text-center">Red lentils</th>
-              <td class="text-center">1 Cup</td>
-            </tr>
-            <tr>
-              <th class="text-center">Chopped tomatoes</th>
-              <td class="text-center">1 Can</td>
-            </tr>
-             <tr>
-              <th class="text-center">other ingredients</th>
-              <td class="text-center">Tomato purée, Lemon juice, Olive oil, <br>Fresh or frozen Parsley, Chilli flakes, <br>Paprika powder, Salt, Black pepper</td>
-            </tr>
-          </tbody>
-        </table>
+
+        <!-- instructions -->
+        <div class="row">
+            <div class="col-12">
+                <h2>Instructions in 4 steps</h2>
+
+                <div class="media">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
+                  <div class="media-body">
+                    <h3 class="mt-0">Step 1</h3>
+                    <P> Basically chop onion and garlic, then potatoes (smallish pieces), both sweet and normal, as well as the peeled root celery, yellow pepper and carrots.</P>
+                  </div>
+                </div>
+                <div class="d-none visible-xs col-12">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
+                </div>
+
+                <div class="media">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
+                  <div class="media-body">
+                    <h3 class="mt-0">Step 2</h3>
+                    <P> Add the onion and then the garlics to a pot/deep frying pan with heated olive oil.
+                      After a couple of minutes when these are soft and shiny, add rest of the chopped stuff, fry it all together in the same pot/pan with salt and the spices.
+                      add it to a pot/deep frying pan with heated olive oil. After a couple of minutes when these are soft and shiny.</P>
+                  </div>
+                </div>
+                <div class="d-none visible-xs col-12">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
+                </div>
+
+                <div class="media">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
+                  <div class="media-body">
+                    <h3 class="mt-0">Step 3</h3>
+                    <P>After a little while, add a few squeezes of tomato purée and add some water (just a little, like a cup).
+                      Let it all simmer for a couple of minutes and then add the can of chopped tomatoes.
+                      Turn down the heat so that the soup keeps its juiciness - you might want to add some water if too much boils off.</P>
+                  </div>
+                </div>
+                <div class="d-none visible-xs col-12">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
+                </div>
+
+                <div class="media">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
+                  <div class="media-body">
+                    <h3 class="mt-0">Step 4</h3>
+                    <P>After a while, add the red lentils too. Let it all simmer and cook until all the veggies and lentils are ready.
+                      During this time you can add more spices if needed, and lemon juice. When the soup has a nice texture and is ready, and you’re happy with the seasoning, add a big pinch of fresh or frozen parsley, and stir.
+                      Also add a few table spoons of creme fraiche and stir. Ready!</P>
+                    <p>Best served with a slice of sourdough bread served with salty butter and a slice of Swedish cheese. :)</P>
+                  </div>
+                </div>
+                <div class="d-none visible-xs col-12">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
+                </div>
+                <hr>
+
+            </div>
+        </div>
+
+        <!-- quote -->
+        <div class="row">
+          <div class="col-12">
+            <div class="card card-body bg-light">
+              <blockquote class="blockquote">
+              <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
+              <footer class="blockquote-footer">Jonathan Safran Foer
+                <cite title="Source Title">Eating Animals, 2009, ISBN: 0316069906</cite>
+              </footer>
+            </blockquote>
+            </div>
+          </div>
+        </div>
+        <hr>
       </div>
-    </div>
 
-
-    <!-- instructions -->
-    <div class="row">
-        <div class="col-12">
-            <h2>Instructions in 4 steps</h2>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
-              <div class="media-body">
-                <h3 class="mt-0">Step 1</h3>
-                <P> Basically chop onion and garlic, then potatoes (smallish pieces), both sweet and normal, as well as the peeled root celery, yellow pepper and carrots.</P>
-              </div>
-            </div>
-            <div class="d-none visible-xs col-12">
-                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
-              <div class="media-body">
-                <h3 class="mt-0">Step 2</h3>
-                <P> Add the onion and then the garlics to a pot/deep frying pan with heated olive oil.
-                  After a couple of minutes when these are soft and shiny, add rest of the chopped stuff, fry it all together in the same pot/pan with salt and the spices.
-                  add it to a pot/deep frying pan with heated olive oil. After a couple of minutes when these are soft and shiny.</P>
-              </div>
-            </div>
-            <div class="d-none visible-xs col-12">
-                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
-              <div class="media-body">
-                <h3 class="mt-0">Step 3</h3>
-                <P>After a little while, add a few squeezes of tomato purée and add some water (just a little, like a cup).
-                  Let it all simmer for a couple of minutes and then add the can of chopped tomatoes.
-                  Turn down the heat so that the soup keeps its juiciness - you might want to add some water if too much boils off.</P>
-              </div>
-            </div>
-            <div class="d-none visible-xs col-12">
-                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
-            </div>
-
-            <div class="media">
-              <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
-              <div class="media-body">
-                <h3 class="mt-0">Step 4</h3>
-                <P>After a while, add the red lentils too. Let it all simmer and cook until all the veggies and lentils are ready.
-                  During this time you can add more spices if needed, and lemon juice. When the soup has a nice texture and is ready, and you’re happy with the seasoning, add a big pinch of fresh or frozen parsley, and stir.
-                  Also add a few table spoons of creme fraiche and stir. Ready!</P>
-                <p>Best served with a slice of sourdough bread served with salty butter and a slice of Swedish cheese. :)</P>
-              </div>
-            </div>
-            <div class="d-none visible-xs col-12">
-                <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
-            </div>
-            <hr>
-
+      <!-- Footer -->
+      <footer class="py-5 bg-dark">
+        <div class="container text-center">
+          <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
+          <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
+          <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
+          <p class="m-0 text-white">Copyright &copy; Your Website 2020</p>
         </div>
-    </div>
-
-    <!-- quote -->
-    <div class="row">
-      <div class="col-12">
-        <div class="card card-body bg-light">
-          <blockquote class="blockquote">
-          <p class="mb-0">“While it is always possible to wake a person who's sleeping, no amount of noise will wake a person who is pretending to be asleep.”</p>
-          <footer class="blockquote-footer">Jonathan Safran Foer
-            <cite title="Source Title">Eating Animals, 2009, ISBN: 0316069906</cite>
-          </footer>
-        </blockquote>
-        </div>
-      </div>
-    </div>
-    <hr>
-  </div>
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container text-center">
-      <a class="btn btn-social-icon btn-google text-white" href="www.google.com"><i class="fa fa-google-plus"></i></a>
-      <a class="btn btn-social-icon btn-facebook text-white" href="www.facebook.com"><i class="fa fa-facebook"></i></a>
-      <a class="btn btn-social-icon btn-instagram text-white" href="www.instagram.com"><i class="fa fa-instagram"></i></a>
-      <p class="m-0 text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+        <!-- /.container -->
+      </footer>
+    </main>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
