--- a/cookbook_minimal/carousel/a_soup_recipe_from_the_north_joanna.html
+++ b/cookbook_minimal/carousel/a_soup_recipe_from_the_north_joanna.html
@@ -134,18 +134,18 @@
                 <h2>Instructions in 4 steps</h2>
 
                 <div class="media">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-at-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
                   <div class="media-body">
                     <h3 class="mt-0">Step 1</h3>
                     <P> Basically chop onion and garlic, then potatoes (smallish pieces), both sweet and normal, as well as the peeled root celery, yellow pepper and carrots.</P>
                   </div>
                 </div>
-                <div class="d-none visible-xs col-12">
+                <div class="d-none visible-at-xs col-12">
                     <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/chopped.jpeg" alt="eggplants_in_oven">
                 </div>
 
                 <div class="media">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-at-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
                   <div class="media-body">
                     <h3 class="mt-0">Step 2</h3>
                     <P> Add the onion and then the garlics to a pot/deep frying pan with heated olive oil.
@@ -153,12 +153,12 @@
                       add it to a pot/deep frying pan with heated olive oil. After a couple of minutes when these are soft and shiny.</P>
                   </div>
                 </div>
-                <div class="d-none visible-xs col-12">
+                <div class="d-none visible-at-xs col-12">
                     <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/fried.jpeg" alt="ingredients_ready_to_mix">
                 </div>
 
                 <div class="media">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-at-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
                   <div class="media-body">
                     <h3 class="mt-0">Step 3</h3>
                     <P>After a little while, add a few squeezes of tomato purée and add some water (just a little, like a cup).
@@ -166,12 +166,12 @@
                       Turn down the heat so that the soup keeps its juiciness - you might want to add some water if too much boils off.</P>
                   </div>
                 </div>
-                <div class="d-none visible-xs col-12">
+                <div class="d-none visible-at-xs col-12">
                     <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/mixed.jpeg" alt="base_ready">
                 </div>
 
                 <div class="media">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
+                  <img class="d-flex mr-3 img-thumbnail align-self-center hidden-at-xs" src="../assets/img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
                   <div class="media-body">
                     <h3 class="mt-0">Step 4</h3>
                     <P>After a while, add the red lentils too. Let it all simmer and cook until all the veggies and lentils are ready.
@@ -180,7 +180,7 @@
                     <p>Best served with a slice of sourdough bread served with salty butter and a slice of Swedish cheese. :)</P>
                   </div>
                 </div>
-                <div class="d-none visible-xs col-12">
+                <div class="d-none visible-at-xs col-12">
                     <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/a_soup_recipe_from_the_north_joanna/served.jpeg" alt="eggs_added">
                 </div>
                 <hr>
