responsive with Eric

--- a/cookbook_minimal/carousel/index.html
+++ b/cookbook_minimal/carousel/index.html
@@ -13,25 +13,19 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../assets/dist/css/bootstrap.css" rel="stylesheet">
-
+    <!-- Custom styles for this template -->
+    <link href="carousel.css" rel="stylesheet">
+    <!-- Highest priority? -->
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+      @media (max-width: 768px) {
+        .media img {
+          display: none;
+        }
+        .under_media img {
+          display: block;
         }
       }
     </style>
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
   </head>
 
   <body>
