--- a/cookbook_minimal/carousel/mirza_ghassemi_mahin.html
+++ b/cookbook_minimal/carousel/mirza_ghassemi_mahin.html
@@ -116,59 +116,59 @@
           <div class="col-12">
               <h2>Instructions in 5 steps</h2>
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/../assets/img/mirza_ghassemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+                <img class="d-none d-sm-block img-thumbnail align-self-center" src="../assets/../assets/img/mirza_ghassemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
                 <div class="media-body">
                   <h3 class="mt-0">Step 1</h3>
                   <P>Originally the eggplants are supposed to be grilled on fire. This gives them a unique taste. I used my oven instead like below. Let them inside for 45 min at 170-180°C.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/eggplants_in_oven.jpg" alt="eggplants_in_oven">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/../assets/img/mirza_ghassemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/../assets/img/mirza_ghassemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
                 <div class="media-body">
                   <h3 class="mt-0">Step 2</h3>
                   <P>After 45 minutes, let them cool down. In the meantime, cut your onions and garlic and chop the tomatoes (maybe use a mixer but don't over do it!). Your result should look something like this.</P>
                   <P>Its should be now fairly easy to peel the eggplants off which we do in this step and then using a mixer or a simple knife to chop the already peeled eggplants.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/ingredients_ready_to_mix.jpg" alt="ingredients_ready_to_mix">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/../assets/img/mirza_ghassemie_mahin/base_ready.jpg" alt="base_ready">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/../assets/img/mirza_ghassemie_mahin/base_ready.jpg" alt="base_ready">
                 <div class="media-body">
                   <h3 class="mt-0">Step 3</h3>
                   <P>Now we start frying everything! Start with onions and garlic, after 5 minutes, add the eggplants. When the mixture got a bit golden, add the tomatoes, bring the stove lower and put a lid on top of the pan. Let it cook for another 10 minutes. You’ll have something like this at the end of this step.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/base_ready.jpg" alt="base_ready">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/../assets/img/mirza_ghassemie_mahin/base_ready.jpg" alt="base_ready">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/mirza_ghassemie_mahin/eggs_added.jpg" alt="eggs_added">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/mirza_ghassemie_mahin/eggs_added.jpg" alt="eggs_added">
                 <div class="media-body">
                   <h3 class="mt-0">Step 4</h3>
                   <P>Break and add the eggs! Before adding the eggs make some placeholders so they don't spread all over as shown in the picture below. Afterwards put the lid on top of the pan again. Let it cook for another 5-10 minutes. </P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/mirza_ghassemie_mahin/eggs_added.jpg" alt="eggs_added">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/mirza_ghassemie_mahin/eggs_added.jpg" alt="eggs_added">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/mirza_ghassemie_mahin/serve.jpg" alt="serve">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/mirza_ghassemie_mahin/serve.jpg" alt="serve">
                 <div class="media-body">
                   <h3 class="mt-0">Step 5</h3>
                   <P>And finally Mirza Ghassemi is ready to serve! Maybe add some parsley on the side to decorate it like I did. Bon Appetit!</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/mirza_ghassemie_mahin/serve.jpg" alt="serve">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/mirza_ghassemie_mahin/serve.jpg" alt="serve">
               </div>
               <hr>
 
