--- a/cookbook_minimal/carousel/carrot_cake_alex.html
+++ b/cookbook_minimal/carousel/carrot_cake_alex.html
@@ -128,19 +128,19 @@
           <div class="col-12">
               <h2>Instructions in 4 steps</h2>
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
                 <div class="media-body">
                   <h3 class="mt-0">Step 1</h3>
                   <P>Rasp/grate the carrots so that you have fine little pieces. Add the almonds (grinded like flour).
                     Use two other pots for the eggs. Separate the eggs - white and yellow.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/ingredients.jpeg" alt="eggplants_in_oven">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
                 <div class="media-body">
                   <h3 class="mt-0">Step 2</h3>
                   <P> Stir the egg white at high speed stiff and fluffy in one pot.
@@ -150,29 +150,29 @@
                     Afterwards you put the stiff egg white under the dough, but don't stir this hard, just use a spoon and stir a little bit until it is all one dough.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/mixed.jpeg" alt="ingredients_ready_to_mix">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
                 <div class="media-body">
                   <h3 class="mt-0">Step 3</h3>
                   <P>Put it into a buttered cake form and bake it for 50 - 60 min at 200 degrees celsius.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
-                  <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
+              <div class="col-12">
+                  <img class="d-block d-sm-none mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/before_oven.jpeg" alt="base_ready">
               </div>
 
               <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/after_oven.jpeg" alt="eggs_added">
+                <img class="d-none d-sm-block mr-3 img-thumbnail align-self-center hidden-xs" src="../assets/img/carrot_cake_alex/after_oven.jpeg" alt="eggs_added">
                 <div class="media-body">
                   <h3 class="mt-0">Step 4</h3>
                   <P>After baking you can cover the cake with chocolate or anything else you like.</P>
                 </div>
               </div>
-              <div class="d-none visible-xs col-12">
+              <div class="d-block d-sm-none visible-xs col-12">
                   <img class="d-flex mr-3 img-thumbnail align-self-center vw-100" src="../assets/img/carrot_cake_alex/after_oven.jpeg" alt="eggs_added">
               </div>
               <hr>
